deploy/prod/grafana-unfurl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-unfurl
spec:
  template:
    spec:
      containers:
      - name: grafana-unfurl
        image: secoya/grafana-unfurl:0.0.2
        resources:
          requests:
            memory: 100Mi
            cpu: 10m
          limits:
            memory: 400Mi
            cpu: 100m
        volumeMounts:
        - name: config
          mountPath: /grafana-unfurl/config.yaml
          subPath: config.yaml
          readOnly: true
      volumes:
      - name: config
        secret:
          secretName: grafana-unfurl
